增强了图书检索，优化了大量异常提示
1.优化了错误提示页面
2.使用了风格统一的图书搜索结果icon
3.美化了生成成绩单的按钮
4.优化了两图书信息不齐全的提示
5.优化了无图书搜索结果的异常跳转
6.增加了馆藏图书按作者、出版社查找
7.优化了修改密码后用旧密码课表查询的提示
8.修复了部分iPhone手机用户课表第六节遮挡不全的bug
9.课表课程内容可以长按复制到粘贴板
10.电费查询空调用电项加入风扇
11.废弃了无用的notfound页面，统一使用querryerror页面报错提示
12.功能九宫格埋设好图书欠费查询的按钮
13.feature页面按钮风格统一
14.优化成绩查询异常的提示
15.个人信息页面查询异常跳转变更
16.去除了部门电话页面的下拉刷新功能

--- a/pages/bookSearch/bookInfo/bookDetail.wxml
+++ b/pages/bookSearch/bookInfo/bookDetail.wxml
@@ -1,4 +1,3 @@
-<!--pages/bookSearch/bookInfo/bookDetail.wxml-->
 <page>
   <view>
     <view class="cover-container" wx:if="{{doubanStr.images.large}}">
@@ -16,13 +15,32 @@
         <text class="score">{{doubanStr.rating.average}}</text>
         <text class="viewers">{{doubanStr.rating.numRaters}}参与</text>
       </view>
-       <view style='float:right;margin-right:4px;margin-top:-25px;' wx:if="{{doubanStr.title}}">
+      <view class="sharerange" style='float:right;' wx:if="{{doubanStr.title}}">
         <button plain='true' open-type="share" type="primary" hover-class="other-button-hover">
           <image class="shareIcon" src='/images/share_green.png'></image>分享
         </button>
       </view>
     </view>
-    <view class="weui-panel weui-panel_access">
+    <view class="book-intro raduis" wx:if='{{doubanStr=="null"}}'>
+      <view class="remind-box">
+        <image class="remind-img" src="/images/nothing.png"></image>
+        <text class="remind-text">只有馆藏信息哦</text>
+      </view>
+    </view>
+    <view class="book-intro raduis" wx:if='{{jsonStr[0][0]=="图书馆系统无响应"}}'>
+      <view class="remind-box">
+        <image class="remind-img" src="/images/nothing.png"></image>
+        <text class="remind-text">图书馆OPAC系统无响应，请耐心等待</text>
+        <text class="remind-text">您可以先看看该书的简介信息</text>
+      </view>
+    </view>
+    <view class="book-intro raduis" wx:elif='{{jsonStr=="无"}}'>
+      <view class="remind-box">
+        <image class="remind-img" src="/images/nothing.png"></image>
+        <text class="remind-text">本校图书馆暂无馆藏</text>
+      </view>
+    </view>
+    <view class="weui-panel weui-panel_access raduis" wx:else>
       <view class="weui-panel__hd">图书馆馆藏</view>
       <view class="weui-panel__bd" wx:for='{{jsonStr}}' wx:key='LibraryStorage'>
         <view class="weui-media-box weui-media-box_text">
@@ -40,7 +58,7 @@
         </view>
       </view>
     </view>
-    <view class="book-intro" wx:if="{{doubanStr.summary}}">
+    <view class="book-intro weui-panel raduis" wx:if="{{doubanStr.summary}}">
       <view class="intro-header">
         <text>简介</text>
       </view>
@@ -53,7 +71,7 @@
       <text class="intro-content">{{doubanStr.author_intro}}</text>
     </view>
   </view>
-   <view class="weui-footer">
+  <view class="weui-footer">
     <view class="weui-footer__links">
       <navigator url="/pages/features/about" class="weui-footer__link">Airmole.</navigator>
       <navigator url="/pages/features/about" class="weui-footer__link">智慧校园</navigator>
