--- a/pages/bookSearch/bookInfo/bookDetail.wxss
+++ b/pages/bookSearch/bookInfo/bookDetail.wxss
@@ -4,6 +4,19 @@ page {
   background: #eee;
 }
 
+.raduis {
+  border-radius: 25px;
+}
+
+.sharerange {
+  position: absolute;
+  top: 190rpx;
+  right: 20rpx;
+  width: 200rpx;
+  text-align: center;
+  box-shadow: 2px 2px 10px #ccc;
+}
+
 .cover-container {
   background: #7acfa6;
   text-align: center;
@@ -24,7 +37,7 @@ page {
 
 .book-meta .range {
   position: absolute;
-  top: 30rpx;
+  top: 10rpx;
   right: 20rpx;
   width: 180rpx;
   background: #fff;
@@ -91,4 +104,23 @@ page {
   width: 26px;
   height: 26px;
   vertical-align: middle;
+}
+
+.remind-box {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.remind-img {
+  width: 250rpx;
+  height: 250rpx;
+  padding-bottom: 25rpx;
+}
+
+.remind-text {
+  font-size: 12pt;
+  line-height: 150%;
 }
