--- a/pages/bookSearch/bookInfo/bookInfo.wxml
+++ b/pages/bookSearch/bookInfo/bookInfo.wxml
@@ -15,18 +15,26 @@
         <text class="score">{{doubanStr.rating.average}}</text>
         <text class="viewers">{{doubanStr.rating.numRaters}}参与</text>
       </view>
-      <view style='float:right;margin-right:4px;margin-top:-25px;' wx:if="{{doubanStr.title}}">
+      <view class="sharerange" style='float:right;' wx:if="{{doubanStr.title}}">
         <button plain='true' open-type="share" type="primary" hover-class="other-button-hover">
           <image class="shareIcon" src='/images/share_green.png'></image>分享
         </button>
       </view>
     </view>
-    <view class="book-intro" wx:if='{{jsonStr=="无"}}'>
-      <view class="intro-header">
-        <text>本校图书馆暂无馆藏🙃</text>
+    <view class="book-intro raduis" wx:if='{{jsonStr[0][0]=="图书馆系统无响应"}}'>
+      <view class="remind-box">
+        <image class="remind-img" src="/images/nothing.png"></image>
+        <text class="remind-text">图书馆OPAC系统无响应，请耐心等待</text>
+        <text class="remind-text">您可以先看看该书的简介信息</text>
       </view>
     </view>
-    <view class="weui-panel weui-panel_access" wx:if='{{jsonStr!=="无"}}'>
+    <view class="book-intro raduis" wx:elif='{{jsonStr=="无"}}'>
+      <view class="remind-box">
+        <image class="remind-img" src="/images/nothing.png"></image>
+        <text class="remind-text">本校图书馆暂无馆藏</text>
+      </view>
+    </view>
+    <view class="weui-panel weui-panel_access raduis" wx:else>
       <view class="weui-panel__hd">图书馆馆藏</view>
       <view class="weui-panel__bd" wx:for='{{jsonStr}}' wx:key='LibraryStorage'>
         <view class="weui-media-box weui-media-box_text">
@@ -44,12 +52,11 @@
         </view>
       </view>
     </view>
-    <view class="book-intro" wx:if="{{doubanStr.summary}}">
+    <view class="book-intro weui-panel raduis" wx:if="{{doubanStr.summary}}">
       <view class="intro-header">
         <text>简介</text>
       </view>
-      <text class="intro-content">{{doubanStr.summary}}
-</text>
+      <text class="intro-content">{{doubanStr.summary}}</text>
     </view>
     <view class="book-intro" wx:if="{{doubanStr.suthor_intro}}">
       <view class="intro-header">
