--- a/pages/bookSearch/bookInfo/bookList.wxml
+++ b/pages/bookSearch/bookInfo/bookList.wxml
@@ -8,7 +8,7 @@
       <view class="weui-panel__bd">
         <navigator url="./bookDetail?marc_no={{item.url}}" class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active" wx:for='{{keywordStr}}' wx:key='searchResultList'>
           <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
-            <image class="weui-media-box__thumb" src="/images/book2.png" />
+            <image class="weui-media-box__thumb" src="/images/BookTag.png" />
           </view>
           <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
             <view class="weui-media-box__title">{{item.title}}</view>
