--- a/pages/bookSearch/index.wxss
+++ b/pages/bookSearch/index.wxss
@@ -11,6 +11,18 @@
   }
 }
 
+.login-btn {
+  font-size: 13pt;
+  line-height: 85rpx;
+  height: 85rpx;
+  background: #04c065;
+  color: #fff;
+  text-align: center;
+  border-radius: 25px;
+  box-shadow: 5rpx 5rpx 15rpx #ccc;
+  margin: 0 30rpx 30rpx;
+}
+
 .describe {
   height: 100vw;
 }
