改了索书号字体

--- a/pages/bookSearch/bookInfo/bookDetail.wxml
+++ b/pages/bookSearch/bookInfo/bookDetail.wxml
@@ -44,7 +44,7 @@
       <view class="weui-panel__hd">图书馆馆藏</view>
       <view class="weui-panel__bd" wx:for='{{jsonStr}}' wx:key='LibraryStorage'>
         <view class="weui-media-box weui-media-box_text">
-          <view class="weui-media-box__title">索书号：{{item[0]}}</view>
+          <view class="weui-media-box__title suoshuNO">索书号：{{item[0]}}</view>
           <view class="weui-media-box__desc">条码号：{{item[1]}}</view>
           <view class="weui-media-box__title">状态：
             <view class="weui-badge" style="margin-left: 5px;" wx:if='{{item[4]=="可借"}}'>{{item[4]}}</view>
