--- a/pages/electricity/electricityFare.wxml
+++ b/pages/electricity/electricityFare.wxml
@@ -41,7 +41,7 @@
         <text>度</text>
       </view>
     </view>
-    <view class="result-chargeInfo" style='height:200px;margin-bottom:50px;'>
+    <view wx:if="{{eleJson.Balance !== 'N/A'}}" class="result-chargeInfo" style='height:200px;margin-bottom:50px;'>
       <view class="chargeInfo-num chargeInfo-model result-model" style='height:200px;'>
         <canvas canvas-id="lineCanvas" disable-scroll="true" bindtouchstart="touchHandler" style='width:100%;height:200px;'></canvas>
       </view>
