--- a/pages/score/showScore/showScore.wxml
+++ b/pages/score/showScore/showScore.wxml
@@ -1,9 +1,14 @@
 <!--pages/score/showScore/showScore.wxml-->
 <view class="page" wx:if="{{!isLoading}}">
-  <view class="page__hd" style='padding-bottom:15px;'>
+  <view class="page__hd" style='padding-top:10px;'>
     <view class="page__title">成绩查询</view>
-    <view class="page__desc" style='color:#000;margin-top:30rpx;'>
+    <view class="page__desc" style='color:#000;'>
       注：最终成绩以教务为准，本程序计算结果仅作参考,不具有官方权威性。学分为0或成绩低于60分的课程不纳入计算公式。
+    </view>
+  </view>
+  <view wx:if="{{showGraphic}}" class="result-chargeInfo" style='height:200px;'>
+    <view class="chargeInfo-num chargeInfo-model result-model" style='height:200px;'>
+      <canvas canvas-id="lineCanvas" disable-scroll="true" bindtouchstart="touchHandler" style='width:100%;height:200px;'></canvas>
     </view>
   </view>
   <view class="score__hd" wx:if="{{jsonContent.data}}">
