--- a/pages/bookSearch/bookInfo/bookList.wxml
+++ b/pages/bookSearch/bookInfo/bookList.wxml
@@ -1,5 +1,5 @@
 <view class="page">
-  <view class="page__hd">
+  <view wx:if="{{keywordStr.cost}}" class="page__hd">
     <view class="page__title">查询结果</view>
     <view class="page__desc">在经历{{keywordStr.cost}}秒的折腾后，我们为您找到了以下{{keywordStr.total}}条内容：</view>
   </view>
